--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body onresize="myFunction()">
     <style>
-    .shareaholic-share-buttons {
-      display: none;
+    .ng-hide {
+      display: none !important;
     }
     </style>
     <div class="sidebar_menu hide_menu">
