--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -236,7 +236,7 @@
         margin: 0;
       }
     }
-    a {
+    .image_recent_articles {
       width: 50%;
       flex-grow: 1;
       padding: 20px;
@@ -244,7 +244,6 @@
       padding-left: 40px;
       img {
         width: 100%;
-
       }
     }
     h1 {
