--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div class="body">
+<div class="body welcome">
   <div class="gray--background">
     <div class="home--main">
       <div class="parentflex">
@@ -95,61 +95,61 @@
       <div class="one_article">
         <%=link_to(image_tag(@first_post.first.thumbnail, alt: @first_post.first.title), @first_post.first )%>
         <p class="paragraph">
-          <%= @first_post.first.title %>
+          <%=link_to(@first_post.first.title, @first_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@second_post.first.thumbnail, alt: @second_post.first.title), @second_post.first )%>
         <p class="paragraph">
-          <%= @second_post.first.title %>
+          <%=link_to(@second_post.first.title, @second_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@third_post.first.thumbnail, alt: @third_post.first.title), @third_post.first )%>
         <p class="paragraph">
-          <%= @third_post.first.title %>
+          <%=link_to(@third_post.first.title, @third_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@fourth_post.first.thumbnail, alt: @fourth_post.first.title), @fourth_post.first )%>
         <p class="paragraph">
-          <%= @fourth_post.first.title %>
+          <%=link_to(@fourth_post.first.title, @fourth_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@fifth_post.first.thumbnail, alt: @fifth_post.first.title), @fifth_post.first )%>
         <p class="paragraph">
-          <%= @fifth_post.first.title %>
+          <%=link_to(@fifth_post.first.title, @fifth_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@sixth_post.first.thumbnail, alt: @sixth_post.first.title), @sixth_post.first )%>
         <p class="paragraph">
-          <%= @sixth_post.first.title %>
+          <%=link_to(@sixth_post.first.title, @sixth_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@seventh_post.first.thumbnail, alt: @seventh_post.first.title), @seventh_post.first )%>
         <p class="paragraph">
-          <%= @seventh_post.first.title %>
+          <%=link_to(@seventh_post.first.title, @seventh_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@eighth_post.first.thumbnail, alt: @eighth_post.first.title), @eighth_post.first )%>
         <p class="paragraph">
-          <%= @eighth_post.first.title %>
+          <%=link_to(@eighth_post.first.title, @eighth_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@nineth_post.first.thumbnail, alt: @nineth_post.first.title), @nineth_post.first )%>
         <p class="paragraph">
-          <%= @nineth_post.first.title %>
+          <%=link_to(@nineth_post.first.title, @nineth_post.first )%>
         </p>
       </div>
       <div class="one_article">
         <%=link_to(image_tag(@tenth_post.first.thumbnail, alt: @tenth_post.first.title), @tenth_post.first )%>
         <p class="paragraph">
-          <%= @tenth_post.first.title %>
+          <%=link_to(@tenth_post.first.title, @tenth_post.first )%>
         </p>
       </div>
     </div>
