changed entertainment to health and fitness

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -489,6 +489,9 @@ footer {
       #exclusive-title--id {
         margin-top: 45px;
         padding: 10px;
+        font-family: "Lusitana";
+        font-weight: 400;
+        font-size: 20px;
       }
       .exclusive-title {
         color: white;
