--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,7 +26,7 @@
 <%= f.file_field :thumbnail %><br /><br />
 
 <br><%= f.label "Category" %>
-<%= f.select :meta_title, ['Beauty', 'Fashion', 'Health & Fitness', 'Lifestyle', 'Trends', 'Entertainment', 'Academics', 'Tips & Hacks', 'DIY', 'Travel', 'Love & Relationships'] %><br />
+<%= f.select :meta_title, ['Academics', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'Entertainment', 'Tips & Hacks', 'DIY', 'Beauty', 'Fashion', 'Travel', 'Love & Relationships'] %><br />
 
 <br><%= f.label :meta_description %><br>
 <%= f.text_field :meta_description %>
