--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -12,7 +12,7 @@
     <br />
 
     <%= f.label "Primary Category" %><br /><br />
-    <%= f.select :category, ['Beauty', 'Fashion', 'Health & Fitness', 'Lifestyle', 'Trends', 'Entertainment', 'Academics', 'Tips & Hacks', 'DIY', 'Travel', 'Love & Relationships']%><br />
+    <%= f.select :category, ['Beauty', 'Fashion', 'Health & Fitness', 'Lifestyle', 'Trends', 'Entertainment', 'Academics', 'Tips & Hacks', 'DIY', 'Travel']%><br />
 
     <br />
     <br />
