categories can link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -186,7 +186,7 @@
           <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title), post )%>
           <div class="article--description">
             <h1><%= link_to post.title, post %></h1>
-            <p class="category"><%= post.meta_title %></p>
+            <p class="category"><%= link_to(Category.find(post.category_id).name, Category.find(post.category_id)) %></p>
             <p><%= post.created_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description %></p>
           </div>
@@ -196,7 +196,7 @@
           <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title), post )%>
           <div class="article--description">
             <h1><%= link_to post.title, post %></h1>
-            <p class="category"><%= post.meta_title %></p>
+            <p class="category"><%= link_to(Category.find(post.category_id).name, Category.find(post.category_id)) %></p>
             <p><%= post.created_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description %></p>
           </div>
@@ -207,7 +207,7 @@
         <div class="list--articles desktop">
           <div class="article--description">
             <h1><%= link_to post.title, post %></h1>
-            <p class="category"><%= post.meta_title %></p>
+            <p class="category"><%= link_to(Category.find(post.category_id).name, Category.find(post.category_id)) %></p>
             <p><%= post.created_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description %></p>
           </div>
@@ -217,7 +217,7 @@
           <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title), post, class: "image_recent_articles" )%>
           <div class="article--description">
             <h1><%= link_to post.title, post %></h1>
-            <p class="category"><%= post.meta_title %></p>
+            <p class="category"><%= link_to(Category.find(post.category_id).name, Category.find(post.category_id)) %></p>
             <p><%= post.created_at.strftime("%A, %b %d")%></p>
             <p class="meta"><%= post.meta_description %></p>
           </div>
