--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -112,6 +112,7 @@
             <% if @post.ranking != nil%>
               -- rank <%= @post.ranking %>
             <% end %></span>
+            <%= @post.category_id %>
       <% end %>
     </div>
   <% end %>
