--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -228,13 +228,16 @@
       padding: 20px 0;
       display: flex;
       flex-direction: column;
-      .category {
+      .category a {
         color: $highlight;
         font-family: 'Kristi';
         font-size: 30px;
         margin-bottom: -20px;
         margin: 0;
         text-decoration: none;
+        &:hover {
+          color: #EFA6C4 !important;
+        }
       }
     }
     .image_recent_articles {
