test post category find

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,7 +39,7 @@
 
   <header id="post_title_show">
     <h1 class="title_article_show"><%= @post.title %></h1>
-    <h3><%= @post.meta_title %></h3>
+    <h3><%= link_to(@post.meta_title, Category.find(@post.category_id)) %></h3>
     <div class="post_info">
       <div class="left_side_flex">
         <% if @post.user.profile.exists? %>
