--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -159,13 +159,16 @@
     font-family: 'Roboto Condensed', sans-serif;
   }
   h3 {
-    color: #333;
     padding: 0 10px;
     font-family: 'Kristi';
     font-size: 15px;
     margin: 0;
     margin-top: 23px;
     text-transform: uppercase;
+    a {
+      text-decoration: none;
+      color: #333;
+    }
   }
 }
 
