--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 
   <%= render 'profile' %>
 
+  <% if current_user && current_user.admin? %>
+  <%= link_to "Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to delete this user?"},  class: "delete" %>
+  <% end %>
+
 <div class="flex--p">
   <p>You're signed in as <%= @user.email %></p>
   <p class="editlink--profile"><%= link_to "Edit Profile", edit_user_path(@user) %></p>
