--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,33 @@
       <%= link_to "New Post", new_post_path(@post), :class => "newpost--profile" %>
     </p>
 
+    <% @userHasCollaboration = false %>
+
+    <% @posts.each do |post| %>
+      <% if post.collaboration == @user.full_name %>
+        <% if @userHasCollaboration == false %>
+          <h1 id="page_title">Your Collaborations</h1>
+          <% @userHasCollaboration = true %>
+        <% end %>
+        
+        <div class="flex--postlist--item">
+          <div class="inside--item">
+            <% if post.approved && post.after_approved == true %>
+            <%= image_tag "published.png", class: "icon" %>
+            <% elsif post.waiting_for_approval && (post.approved == nil || post.approved == false) %>
+            <%= image_tag "waiting.png", class: "icon" %>
+            <% elsif post.approved && post.after_approved == nil %>
+            <%= image_tag "approved.png", class: "icon" %>
+            <% else %>
+            <%= image_tag "saved.png", class: "icon" %>
+            <% end %>
+              <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
+          </div>
+          <h6 id="date"><%= post.created_at.strftime('%A, %B %d') %></h6>
+        </div>
+      <% end %>
+    <% end %>
+
 </div>
 
 <div class="guidelines">
