--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <div id="posts_wrapper" class="skinny_wrapper">
   <h1 id="page_title" style="margin-top: -20px;">Profile Preview</h1>
 
+<div id="background">
   <%= render 'profile' %>
+</div>
 
 <div class="flex--p">
   <p>You're signed in as <%= @user.email %></p>
@@ -40,7 +42,7 @@
           <h1 id="page_title">Your Collaborations</h1>
           <% @userHasCollaboration = true %>
         <% end %>
-        
+
         <div class="flex--postlist--item">
           <div class="inside--item">
             <% if post.approved && post.after_approved == true %>
