--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -163,18 +163,18 @@
           </span>
         <% end %>
         <% if (user.description != "" && user.description != nil) %>
-          <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
+          <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
         <% end %>
 
           <div class="website">
             <% if (user.website != "" && user.website !=  nil) %>
-               <p class="website_link"><span>Website: </span><a href="<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
+               <p class="website_link"><span>Website: </span><a href="<%= user.website %>" target="_blank"><%= user.website %></a></p>
             <% end %>
             <% if (user.twitter != "" && user.twitter !=  nil) %>
-               <p class="website_link"><a href="<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
+               <p class="website_link"><a href="<%= user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
             <% end %>
             <% if (user.insta != "" && user.insta != nil) %>
-               <p class="website_link"><a href="<%= @user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+               <p class="website_link"><a href="<%= user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
             <% end %>
             <% if (user.facebook != "" && user.facebook !=  nil) %>
                <p class="website_link"><a href="<%= user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
